C:/Program Files/Git/product fixed the spacing between tagline and about

--- a/src/components/ListingPage/ListingHeader/ListingHeader.module.css
+++ b/src/components/ListingPage/ListingHeader/ListingHeader.module.css
@@ -253,7 +253,7 @@
   margin-right: 14px;
 }
 .edit-field-wrapper {
-  padding-top: 32px;
+  padding-top: 12px;
   display: flex;
   gap: 12px;
 }
